--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
-    "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js"
+    "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js",
+    "compile-sass": "./node_modules/node-sass/bin/node-sass --watch --recursive --output public/styles public/stylesheets"
   },
   "author": "Lighthouse Labs",
   "license": "ISC",
@@ -15,9 +16,10 @@
     "chance": "^1.0.2",
     "express": "^4.13.4",
     "md5": "^2.1.0",
-    "mongodb": "^2.2.34"
+    "mongodb": "^2.2.34",
   },
   "devDependencies": {
+    "node-sass": "^4.7.2",
     "nodemon": "^1.9.2"
   }
 }
