--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chance": "^1.0.2",
     "express": "^4.13.4",
     "md5": "^2.1.0",
-    "mongodb": "^2.2.34",
+    "mongodb": "^2.2.34"
   },
   "devDependencies": {
     "node-sass": "^4.7.2",
